--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Andy05 — Mis Finanzas",
-    "short_name": "Andy05",
+    "name": "Konteo 05 — Mis Finanzas",
+    "short_name": "Konteo 05",
     "description": "Tu app personal de finanzas — controla tus ingresos y gastos",
     "start_url": "/",
     "display": "standalone",
